# visual-rag-benchmark

./: .env.example  .gitignore  pyproject.toml
data/freak/: dataset.json  dataset_qa.json
data/gqa_sample/: dataset.json
data/seedbench_dataset/: dataset.json
results/: freak_all_models.xlsx  gqa_all_models.xlsx  seedbench_all_models.xlsx
results/cache/: freak_mcq_anthropic.json  freak_mcq_gemini_flash.json  freak_mcq_gemini_pro.json  freak_mcq_kimi.json  freak_mcq_openai.json  freak_qa_anthropic.json  freak_qa_gemini_flash.json  freak_qa_gemini_pro.json  freak_qa_kimi.json  freak_qa_openai.json  gqa_anthropic.json  gqa_gemini_flash.json  gqa_gemini_pro.json  gqa_kimi.json  gqa_openai.json  seedbench_anthropic.json  seedbench_gemini_pro.json  seedbench_kimi.json  seedbench_openai.json
src/vrb/: __init__.py  cli.py  config.py  evaluator.py  freak_anthropic_runner.py  freak_evaluator.py  freak_excel_export.py  freak_openai_runner.py  freak_openrouter_runner.py  freak_runner.py  gqa_anthropic_runner.py  gqa_evaluator.py  gqa_excel_export.py  gqa_openai_runner.py  gqa_openrouter_runner.py  models.py  runner.py  seedbench_anthropic_runner.py  seedbench_evaluator.py  seedbench_excel_export.py  seedbench_openai_runner.py  seedbench_openrouter_runner.py
src/vrb/clients/: __init__.py  base.py  supermemory.py
src/vrb/freak/: evaluator.py  excel_export.py  loader.py  runner.py
src/vrb/gqa/: evaluator.py  excel_export.py  loader.py  runner.py
src/vrb/seedbench/: evaluator.py  loader.py  (+2 more)
test_cases/: example.yaml
tests/: test_evaluator.py  test_supermemory_client.py
